--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,7 +8,7 @@
 
     <script
       id="sap-ui-bootstrap"
-      src="/resources/sap-ui-core.js"
+      src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
       data-sap-ui-theme="sap_fiori_3"
       data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
       data-sap-ui-compatVersion="edge"
