--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UI5 Boilerplate</title>
+    <title>Alt Row Colors</title>
     <link rel="shortcut icon" href="/favicon.ico" />
 
     <script
